--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/passport": "^1.0.4",
     "bcrypt": "^5.0.0",
+    "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "mongodb": "^3.6.0",
     "passport": "^0.4.1",
