--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,17 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "incremental": true
+    "incremental": true,
+    "paths": {
+      "@users/*": [
+        "src/users/*"
+      ],
+      "@shared/*": [
+        "src/shared/*"
+      ]
+    },
+    "exclude": [
+      "node_modules"
+    ]
   }
 }
