--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/jest": "25.2.3",
     "@types/lowdb": "^1.0.9",
     "@types/node": "^13.9.1",
+    "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.0.2",
     "@typescript-eslint/parser": "3.0.2",
