--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
       "@users/*": [
         "src/users/*"
       ],
+      "@posts/*": [
+        "src/posts/*"
+      ],
       "@shared/*": [
         "src/shared/*"
       ]
