--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "helmet": "^4.1.0",
     "mongodb": "^3.6.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
